# sentry-rate-limiting

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  readme.md  ruff.toml  sentry_fake.dockerfile
example/: manual_test_server.py  sentry_config.py
sentry_rate_limiting/: process_event_limiter.py
tests/: test_process_event_limiter.py
