[project]
name = "sentry-rate-limiting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sentry-sdk>=2.20.0",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.12",
    "freezegun>=1.5.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]
